Fixes index page spacing

--- a/app/_scss/pages/base.scss
+++ b/app/_scss/pages/base.scss
@@ -1,8 +1,4 @@
 .content {
-	main.index {
-		width: 100%;
-	}
-
 	main {
 		background-color: #f6f6f6;
 		font-weight: 300;
@@ -15,6 +11,15 @@
 
 		h1 {
 			font-weight: normal;
+		}
+	}
+
+	main.index {
+		width: 100%;
+
+		article {
+			padding: 0;
+			max-width: inherit;
 		}
 	}
 
